# PalmDevice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PalmDeviceGPIO.cpp  PalmDeviceGPIO.h  PalmDeviceServer.cpp  PalmDeviceServer.h  PalmDeviceWS.cpp  linux.toolchain.cmake  main.cpp  tvConfig.h  tvGPIO.cpp  tvGPIO.h  tvGPIO.hpp  tvHTTP.cpp  tvHTTP.h  tvHTTP.hpp  tvUSB.cpp  tvUSB.h  tvWS.cpp  tvWS.hpp
NIDAQ_Browser/: index.html
NIDAQ_Browser/src/: CMakeLists.txt  compile_commands.json  main.cpp
Sensor_Browser/: README.md  tvConfig.h
Sensor_Browser/res/: jquery.canvasjs.js
adv/: CMakeLists.txt  TV-RIG-Test-List.xlsx  index.html  main.cpp  supfun.cpp  supfun.hpp
arduino/: CMakeLists.txt  CppProperties.json  tvUSB.cpp  tvWS.cpp  tvWS.h
arduino/res/: index.html
nidaqmx.model/: readme.md
nidaqmx.model/src/: CMakeLists.win.txt  daqtest.cpp
nidaqmx_demo/src/: CMakeLists.txt
res/: canvasjs.js  index.html  test.html
sensor.usb/: tvGPIO.cpp  tvUSB.h
sensor.usb/res/: test2.json
sensor_usb/: CMakeSettings.json  debug.sh
sensor_usb/res/: test.html
tif2018/: index.html
tif2018/src/: main.cpp
ws/: CMakeLists.txt  setup.sh  test.cpp
ws/example/: basicinfo.css  basicinfo.html  chart.css  dataSend.js  example.html  example.js  sexexp.html  speexp.html
